# monitorsettings

./: .gitignore  .pre-commit-config.yaml  DEMO_SEQUENCE.md  LICENSE  MANIFEST.in  README.md  brightness_blessed.py  brightness_control.py  pyproject.toml  pytest.ini  record_demo.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
monitorsettings/: __init__.py  __main__.py  base.py  cli.py
monitorsettings/controllers/: __init__.py
monitorsettings/controllers/backlight/: __init__.py  base.py  blessed.py  curses.py
tests/: __init__.py  conftest.py  test_backlight_blessed.py  test_backlight_curses.py  test_base.py
tests/integration/: __init__.py  test_cli.py  test_fallback.py
tests/unit/: __init__.py  test_base.py  test_blessed_controller.py  test_curses_controller.py
