[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brightness-control"
version = "1.0.0"
description = "Interactive terminal-based monitor brightness controller using DDC/CI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "nick knowles"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]

keywords = ["brightness", "monitor", "DDC/CI", "ddcutil", "display", "backlight"]

# Python has curses built-in on Linux, no external dependencies needed
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
]
blessed = [
    "blessed>=1.19.0",
]

[project.scripts]
brightness-control = "brightness_control:main"

[tool.setuptools]
py-modules = ["brightness_control"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.ruff]
line-length = 100
target-version = "py37"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
