[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitorsettings"
version = "2.0.0"
description = "Terminal-based monitor control utility using DDC/CI protocol"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "WTFPL"}
authors = [
    {name = "Nick Knowles"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]

keywords = ["brightness", "monitor", "DDC/CI", "ddcutil", "display", "backlight", "settings"]

# Python has curses built-in on Linux, no external dependencies needed
dependencies = []

[project.optional-dependencies]
blessed = [
    "blessed>=1.19.0",
]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest>=7.0.0",
    "pytest-cov",
]

[project.scripts]
monitorsettings = "monitorsettings.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["monitorsettings*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.ruff]
line-length = 100
target-version = "py37"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
