[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitorsettings"
version = "2.0.0"
description = "Terminal-based monitor control utility using DDC/CI protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "WTFPL"}
authors = [
    {name = "Nick Knowles"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]

keywords = ["brightness", "monitor", "DDC/CI", "ddcutil", "display", "backlight", "settings"]

# Python has curses built-in on Linux, no external dependencies needed
dependencies = []

[project.urls]
Homepage = "https://github.com/knowlen/monitorsettings"
Repository = "https://github.com/knowlen/monitorsettings.git"
"Bug Tracker" = "https://github.com/knowlen/monitorsettings/issues"

[project.optional-dependencies]
blessed = [
    "blessed>=1.19.0",
]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
monitorsettings = "monitorsettings.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["monitorsettings*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
